--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^2.2.1",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.4",
+    "tsd": "^0.14.0",
     "typescript": "^4.2.4",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
