fix ci cd  error

--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -11,6 +11,7 @@ jobs:
 
       - name: Install Packages
         run: |
+          rm -rf node_modules package-lock.json && npm install
           npm install
 
       - name: Lint check
