--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "author": "vasiliev-alexey",
   "license": "ISC",
+  "moduleDirectories": [
+    "node_modules",
+    "src"
+  ],
   "devDependencies": {
     "@babel/core": "^7.13.13",
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/debug": "^4.1.5",
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
@@ -24,6 +29,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^5.1.1",
+    "debug": "^4.3.1",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -34,7 +40,6 @@
     "jest-mock-extended": "^1.0.13",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.4",
     "tsd": "^0.14.0",
     "typescript": "^4.2.4",
