--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest": "^26.6.3",
     "jest-mock-extended": "^1.0.13",
     "lint-staged": "^10.5.4",
+    "node-json-db": "^1.3.0",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "tsd": "^0.14.0",
